--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <title>Vite + React</title>
     <style>
  fade.offcanvas-backdrop.show {
@@ -20,7 +20,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <div id="overlay-root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
